--- a/launch.html
+++ b/launch.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0;url=steam://run/730">
+    <meta http-equiv="refresh" content="0;url=steam://rungameid/730">
     <title>Launching CS:GO...</title>
   </head>
   <body>
